cmake_minimum_required(VERSION 3.2)
project(3d_reconstruction)
set(CMAKE_BUILD_TYPE Debug)
find_package( OpenCV REQUIRED )
include_directories(/usr/include/python3.8)
include_directories( ${OpenCV_INCLUDE_DIRS} )
find_package(Eigen3)
include_directories(${Eigen3_INCLUDE_DIRS})
find_package(PCL REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/cpp_dir CLASS_CPP_FILE)
file(GLOB H_FILE "*.h")
add_executable( 3d_reconstruction main.cpp ${CLASS_CPP_FILE} ${H_FILE})
target_link_libraries( 3d_reconstruction ${OpenCV_LIBS} ${PCL_LIBRARIES} python3.8)